Adding dist files

--- a/example/example.html
+++ b/example/example.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Canvas Colour Picker</title>
-		<script src="../dist/canvas-colour-picker.js"></script>
+		<script src="../dist/canvas-colour-picker.min.js"></script>
 		<style>
 #colour-picker {float:left;}
 #values {float:left; margin-left:30px;}
